@@ -93,6 +93,10 @@ public final class FileFilters {
      */
     public static final FileChooser.ExtensionFilter ZIP = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.zip.files") + " (*.zip)", "*.zip");
     /**
+     * The file filter used for txt files.
+     */
+    public static final FileChooser.ExtensionFilter TXT = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.txt.files") + " (*.txt)", "*.txt");
+    /**
      * The file filter used for SQLite files.
      */
     public static final FileChooser.ExtensionFilter SQLITE = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.sqlite.files") + " (*.sqlite)", "*.sqlite");
